update drive links

--- a/stories/index.html
+++ b/stories/index.html
@@ -133,37 +133,37 @@
     <tr>
       <td>0001</td>
       <td><a href="/stories/ar/0001_الرجل-ذو-القامة-الطويلة_slides.html" target="_blank">الرجل ذو القامة الطويلة</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="/stories/ar/0009_أين-قطتي؟_slides.html" target="_blank">أين قطتي؟</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0087</td>
       <td><a href="/stories/ar/0087_-أحب-أن-أقرأ_slides.html" target="_blank">!أحب أن أقرأ</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0156</td>
       <td><a href="/stories/ar/0156_التمساح-الجائع_slides.html" target="_blank">التمساح الجائع</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0253</td>
       <td><a href="/stories/ar/0253_قصتي-المصورة_slides.html" target="_blank">قصتي المصورة</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0302</td>
       <td><a href="/stories/ar/0302_النار_slides.html" target="_blank">النار</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
@@ -184,7 +184,7 @@
     <tr>
       <td>0253</td>
       <td><a href="/stories/bn/0253_আমার-ছবির-বই_slides.html" target="_blank">আমার ছবির বই</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a href="https://drive.google.com/drive/folders/0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
