--- a/stories/ar/0087_-أحب-أن-أقرأ.html
+++ b/stories/ar/0087_-أحب-أن-أقرأ.html
@@ -63,7 +63,7 @@ Letta Machoga<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/04.jpg" /></p>
 
-<p>.أختي نائمة</p>
+<p>أختي نائمة</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Letta Machoga<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
 
-<p>.أمي وجدتي مشغولتان</p>
+<p>أمي وجدتي مشغولتان</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Letta Machoga<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
 
-<p>.أبي وجدي مشغولان</p>
+<p>أبي وجدي مشغولان</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
