--- a/stories/ar/0087_-أحب-أن-أقرأ_slides.html
+++ b/stories/ar/0087_-أحب-أن-أقرأ_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/04.jpg" /></p>
-<p>.أختي نائمة</p>
+<p>أختي نائمة</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
-<p>.أمي وجدتي مشغولتان</p>
+<p>أمي وجدتي مشغولتان</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
-<p>.أبي وجدي مشغولان</p>
+<p>أبي وجدي مشغولان</p>
 <center>
 <strong>7</strong>
 </center>
