--- a/stories/ar/0302_النار.html
+++ b/stories/ar/0302_النار.html
@@ -56,28 +56,28 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>العربية</
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>.النار تحرق</p>
+<p>النار تحرق</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>.النار تمكننا من طهي الطعام</p>
+<p>النار تمكننا من طهي الطعام</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>.النار تعطينا الدفء</p>
+<p>النار تعطينا الدفء</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>.النار تزودنا بالضوء</p>
+<p>النار تزودنا بالضوء</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>العربية</
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>.النار رائعة</p>
+<p>النار رائعة</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
 
-<p>.النار قوية</p>
+<p>النار قوية</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
