--- a/stories/ar/0001_الرجل-ذو-القامة-الطويلة.html
+++ b/stories/ar/0001_الرجل-ذو-القامة-الطويلة.html
@@ -49,14 +49,14 @@ Cornelius Gulere<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 
-<p>.كان معوله قصيراً جداً</p>
+<p>كان معوله قصيراً جداً</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 
-<p>.ومدخل منزله منخفض جداً</p>
+<p>ومدخل منزله منخفض جداً</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Cornelius Gulere<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
 
-<p>ووسع باب منزله</p>
+<p>ووسّع باب منزله</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Cornelius Gulere<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنيناً عديدة من عمره هناك.</p>
+<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنيناً عديدة من عمره هناك</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
