--- a/stories/ar/0001_الرجل-ذو-القامة-الطويلة_slides.html
+++ b/stories/ar/0001_الرجل-ذو-القامة-الطويلة_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>.كان معوله قصيراً جداً</p>
+<p>كان معوله قصيراً جداً</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>.ومدخل منزله منخفض جداً</p>
+<p>ومدخل منزله منخفض جداً</p>
 <center>
 <strong>2</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>ووسع باب منزله</p>
+<p>ووسّع باب منزله</p>
 <center>
 <strong>7</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنيناً عديدة من عمره هناك.</p>
+<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنيناً عديدة من عمره هناك</p>
 <center>
 <strong>11</strong>
 </center>
