--- a/stories/master.html
+++ b/stories/master.html
@@ -1075,7 +1075,7 @@
     </tr>
     <tr>
       <td>0201</td>
-      <td><a href="http://my.africanstorybook.org/stories/my-picture-book">My Picture Book</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1380,7 +1380,7 @@
     </tr>
     <tr>
       <td>0262</td>
-      <td><a href="http://my.africanstorybook.org/stories/visit-shores-lake-albert">A visit to the shores of lake Albert</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1645,8 +1645,8 @@
     </tr>
     <tr>
       <td>0315</td>
-      <td><a href="http://my.africanstorybook.org/stories/goat-dog-and-cow-0">Goat, Dog and Cow</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0316</td>
@@ -1675,7 +1675,7 @@
     </tr>
     <tr>
       <td>0321</td>
-      <td><a href="*http://my.africanstorybook.org/stories/yellow">Yellow</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/yellow">Yellow</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
@@ -1690,7 +1690,7 @@
     </tr>
     <tr>
       <td>0324</td>
-      <td><a href="http://my.africanstorybook.org/stories/i-am-girl">I am a girl</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/day-i-left-home-city">Day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1750,8 +1750,8 @@
     </tr>
     <tr>
       <td>0336</td>
-      <td><a href="http://my.africanstorybook.org/stories/i">I like</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/child-peacemaker">Child as a peacemaker</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
