--- a/stories/master.html
+++ b/stories/master.html
@@ -205,8 +205,8 @@
     </tr>
     <tr>
       <td>0027</td>
-      <td><a href="http://my.africanstorybook.org/stories/rain-drop">Rain drop</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0028</td>
@@ -1510,7 +1510,7 @@
     </tr>
     <tr>
       <td>0288</td>
-      <td><a href="http://my.africanstorybook.org/stories/angel-lucky-girl">Angel the lucky girl</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/maguru-gives-out-legs">Maguru gives out legs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
