--- a/stories/master.html
+++ b/stories/master.html
@@ -245,8 +245,8 @@
     </tr>
     <tr>
       <td>0035</td>
-      <td><a href="http://my.africanstorybook.org/stories/day-my-doll">Day with my doll</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/wind-0">Wind</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0036</td>
@@ -325,8 +325,8 @@
     </tr>
     <tr>
       <td>0051</td>
-      <td><a href="http://my.africanstorybook.org/stories/narrow-escape">Narrow escape</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0052</td>
@@ -380,7 +380,7 @@
     </tr>
     <tr>
       <td>0062</td>
-      <td><a href="http://my.africanstorybook.org/stories/imagine-1">Imagine</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/nangila%E2%80%99s-courage">Nangila’s courage</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -595,8 +595,8 @@
     </tr>
     <tr>
       <td>0105</td>
-      <td><a href="http://my.africanstorybook.org/stories/duck-and-blind-snake">Duck and Blind snake</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/ms-phone">Ms Phone</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0106</td>
@@ -635,8 +635,8 @@
     </tr>
     <tr>
       <td>0113</td>
-      <td><a href="http://my.africanstorybook.org/stories/trying-out-hippos-new-version">Trying out Hippos new version</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/new-pussy-cat">New pussy cat</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0114</td>
@@ -675,7 +675,7 @@
     </tr>
     <tr>
       <td>0121</td>
-      <td><a href="http://my.africanstorybook.org/stories/mary-and-washed-chickens">Mary and the washed chickens</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/porridge">Porridge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -755,8 +755,8 @@
     </tr>
     <tr>
       <td>0137</td>
-      <td><a href="http://my.africanstorybook.org/stories/lekeek-isiet-%0Beight-trees">Lekeek isiet! Eight trees</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/locusts">Locusts</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0138</td>
@@ -830,7 +830,7 @@
     </tr>
     <tr>
       <td>0152</td>
-      <td><a href="http://my.africanstorybook.org/stories/baby-who-cried-0">Baby who cried</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/what-wrong-child-mtoto-shida-ni-nini">What is wrong child?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -940,12 +940,12 @@
     </tr>
     <tr>
       <td>0174</td>
-      <td><a href="http://my.africanstorybook.org/stories/who-big-0">Who is Big?</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/who-big-0">Who is big?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0175</td>
-      <td><a href="http://my.africanstorybook.org/stories/chase">The Chase</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/chase">The chase</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -955,7 +955,7 @@
     </tr>
     <tr>
       <td>0177</td>
-      <td><a href="http://my.africanstorybook.org/stories/little-dog">Little Dog</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/little-dog">Little dog</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1015,7 +1015,7 @@
     </tr>
     <tr>
       <td>0189</td>
-      <td><a href="http://my.africanstorybook.org/stories/i-know-colours">I know colours</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/colours-rainbow">Colours of a rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1070,8 +1070,8 @@
     </tr>
     <tr>
       <td>0200</td>
-      <td><a href="http://my.africanstorybook.org/stories/lekeek-isiet-%0Beight-trees-0">Lekeek isiet! Eight trees</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/amazing-daisy">Amazing Daisy</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0201</td>
@@ -1085,8 +1085,8 @@
     </tr>
     <tr>
       <td>0203</td>
-      <td><a href="http://my.africanstorybook.org/stories/fly">A fly</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/searching-spirit-spring">Searching for the spirit of Spring</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -1150,7 +1150,7 @@
     </tr>
     <tr>
       <td>0216</td>
-      <td><a href="http://my.africanstorybook.org/stories/skipping">Skipping</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/pendo-our-cow">Pendo our cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1295,8 +1295,8 @@
     </tr>
     <tr>
       <td>0245</td>
-      <td><a href="http://my.africanstorybook.org/stories/wama%C5%8Be-weak-man-2">Wamaŋe the weak man</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/our-day-zoo">Our day at the zoo</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0246</td>
@@ -1560,7 +1560,7 @@
     </tr>
     <tr>
       <td>0298</td>
-      <td><a href="http://my.africanstorybook.org/stories/kumbanas-child">Kumbana’s Child</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/kumbanas-child">Kumbana’s child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
