--- a/stories/master.html
+++ b/stories/master.html
@@ -325,7 +325,7 @@
     </tr>
     <tr>
       <td>0051</td>
-      <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/day-we-saw-rainbow">Day we saw the rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -960,8 +960,8 @@
     </tr>
     <tr>
       <td>0178</td>
-      <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede-2">Chicken and Millipede</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/why-ajao-was-not-buried">Why Ajao was not buried</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0179</td>
@@ -1015,7 +1015,7 @@
     </tr>
     <tr>
       <td>0189</td>
-      <td><a href="http://my.africanstorybook.org/stories/colours-rainbow">Colours of a rainbow</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/hare-trickster">Hare the trickster </a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1055,8 +1055,8 @@
     </tr>
     <tr>
       <td>0197</td>
-      <td><a href="http://my.africanstorybook.org/stories/my-first-day-market">My first day at the market</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/dog-and-crocodile">Dog and Crocodile</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0198</td>
@@ -1150,7 +1150,7 @@
     </tr>
     <tr>
       <td>0216</td>
-      <td><a href="http://my.africanstorybook.org/stories/pendo-our-cow">Pendo our cow</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/day-sun-went-away-2">Day the sun went away</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1175,13 +1175,13 @@
     </tr>
     <tr>
       <td>0221</td>
-      <td><a href="http://my.africanstorybook.org/stories/what-do-you-see">What do you see?</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/guilty-conscience-song-english">Guilty Conscience</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0222</td>
-      <td><a href="http://my.africanstorybook.org/stories/hare-and-hyena">Hare and Hyena</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/devil%E2%80%99s-scarf">Devil’s scarf</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0223</td>
@@ -1255,8 +1255,8 @@
     </tr>
     <tr>
       <td>0237</td>
-      <td><a href="http://my.africanstorybook.org/stories/i-can-do">I can do this</a></td>
-      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/mr-mkhizes-quarters">Mr Mkhize’s quarters</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0238</td>
@@ -1265,7 +1265,7 @@
     </tr>
     <tr>
       <td>0239</td>
-      <td><a href="http://my.africanstorybook.org/stories/skipping-0">Skipping</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/namorutunga-0">Namorutunga</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -1550,8 +1550,8 @@
     </tr>
     <tr>
       <td>0296</td>
-      <td><a href="http://my.africanstorybook.org/stories/two-good-friends-0">Two Good Friends</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0297</td>
@@ -1815,7 +1815,7 @@
     </tr>
     <tr>
       <td>0349</td>
-      <td><a href="http://my.africanstorybook.org/stories/acanit-becomes-orphan-0">Acanit becomes an orphan</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/mod-toad">Mod the Toad</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
