--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -29,22 +29,29 @@
         <option value="alz">Alur</option>
         <option value="am">Amharic</option>
         <option value="anu">Anywak</option>
+        <option value="ar">Arabic</option>
         <option value="luc">Aringati</option>
         <option value="teo">Ateso</option>
+        <option value="ny">Chichewa</option>
         <option value="zh">Chinese</option>
         <option value="nyu">Chinyungwe</option>
         <option value="cce">Cicopi</option>
+        <option value="dga">Dagaare</option>
+        <option value="dag">Dagbani</option>
         <option value="da">Danish</option>
         <option value="luo">Dholuo</option>
+        <option value="adh">Dhopadhola</option>
         <option value="guz">Ekegusii</option>
         <option value="en">English</option>
         <option value="eo">Esperanto</option>
+        <option value="ee">Ewe</option>
         <option value="fr">French</option>
         <option value="ff">Fulfulde</option>
         <option value="de">German</option>
         <option value="de">German</option>
         <option value="ki">Gikuyu</option>
         <option value="toh">Gitonga</option>
+        <option value="gjn">Gonja</option>
         <option value="gu">Gujarati</option>
         <option value="gur">Gurene</option>
         <option value="ha">Hausa</option>
@@ -54,11 +61,13 @@
         <option value="zu">isiZulu</option>
         <option value="jam">Jamaican Creole</option>
         <option value="keo">Kakwa</option>
+        <option value="kln">Kalenjin</option>
         <option value="kr">Kanuri</option>
         <option value="kam">Kikamba</option>
         <option value="mer">Kimîîru</option>
         <option value="rw">Kinyarwanda</option>
         <option value="sw">Kiswahili</option>
+        <option value="ko">Korean</option>
         <option value="laj">Leblango</option>
         <option value="bxk">Lubukusu</option>
         <option value="lg">Luganda</option>
