--- a/stories/index.html
+++ b/stories/index.html
@@ -95,6 +95,8 @@
 
 <li class="toc"><a href="#japanese">Japanese [日本語]</a></li><br>
 
+<li class="toc"><a href="#korean">Korean [한국어]</a></li><br>
+
 <li class="toc"><a href="#malay">Malay [Bahasa Melayu]</a></li><br>
 
 <li class="toc"><a href="#nepali">Nepali [नेपाली]</a></li><br>
@@ -1295,6 +1297,27 @@
 </table>
 
    </ul>
+  <h3><a name='korean'>Korean [한국어]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/ko/0337_밀랍-아이들_slides.html" target="_blank">밀랍 아이들</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='malay'>Malay [Bahasa Melayu]</a></h3>
    <ul><table>
   <thead>
@@ -2382,7 +2405,7 @@
       <td>0337</td>
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#nn0337">nn</a>, <a href="#no0337">no</a></td>
+      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a></td>
     </tr>
     <tr>
       <td>0341</td>
