--- a/stories/index.html
+++ b/stories/index.html
@@ -1309,6 +1309,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0111</td>
+      <td><a href="/stories/ko/0111_하마는-왜-털이-없을까요_slides.html" target="_blank">하마는 왜 털이 없을까요?</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0337</td>
       <td><a href="/stories/ko/0337_밀랍-아이들_slides.html" target="_blank">밀랍 아이들</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1980,6 +1986,12 @@
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/tl/0337_mga-batang-sera_slides.html" target="_blank">Mga Batang Sera</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -2172,6 +2184,12 @@
       <td><a href="http://my.africanstorybook.org/stories/cow-my-friend">A cow is my friend</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#gu0098">gu</a>, <a href="#zh0098">zh</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#ko0111">ko</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -2405,7 +2423,7 @@
       <td>0337</td>
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a></td>
+      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#tl0337">tl</a></td>
     </tr>
     <tr>
       <td>0341</td>
