--- a/stories/tl/0337_mga-batang-sera_slides.html
+++ b/stories/tl/0337_mga-batang-sera_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Kva gjer du? - Global African Storybook</title>
+  <title>Mga Batang Sera - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="kva-gjer-du" class="slide level1">
-<h1>Kva gjer du?</h1>
+<section id="mga-batang-sera" class="slide level1">
+<h1>Mga Batang Sera</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p>Eg syng.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
+<p>Noong unang panahon, may isang masayang mag-anak.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p>Ho vinkar.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
+<p>Pawang mga lalaki ang mga anak at hindi sila kailanman nag-aaway. Tinutulungan nila ang kanilang magulang sa bukid at sa gawaing-bahay.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p>Eg klappar.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
+<p>Malaya nilang nagagawa ang anuman, maliban sa isang bagay. Hindi sila maaaring lumapit sa apoy.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p>Ho strekkjer seg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
+<p>Sa gabi lamang sila nagtatrabaho dahil sila ay mga sera!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p>Han ropar.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
+<p>Ngunit pinangarap ng isa na makita ang araw.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p>Eg svarar.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
+<p>Isang umaga, hindi niya nalabanan ang matinding pag-aasam. Pinigilan siya ng kanyang mga kapatid...</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p>Ho lyttar.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
+<p>Subalit huli na ang lahat! Siya ay nalusaw na ng mainit na araw.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p>Kva gjer du?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
+<p>Labis na nalungkot ang mga batang sera sa nakitang dinanas ng kapatid.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="kva-gjer-du-1">Kva gjer du?</h2>
-<strong>Tekst:</strong> Nina Orange<br> <strong>Illustrasjonar:</strong> Wiehan dei Jagar<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
+<p>Kaya gumawa sila ng paraan upang matupad ang kanyang pangarap. Sama sama nilang hinubog ang serang labi ng kapatid at ginawa itong ibon.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
+<p>Dinala nila ang ibon sa tuktok ng bundok.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
+<p>At sabay ng pagsikat ng araw, lumipad ang ibon tungo sa liwanag ng araw, na may awit na taglay.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="mga-batang-sera-1">Mga Batang Sera</h2>
+<strong>Text:</strong> Southern African Folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/children-wax'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
