--- a/stories/nn/0008_kva-gjer-du.html
+++ b/stories/nn/0008_kva-gjer-du.html
@@ -77,7 +77,7 @@ Nina Orange<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
 
-<p>Han kallar.</p>
+<p>Han ropar.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
