--- a/stories/nn/0095_zama_er_flink.html
+++ b/stories/nn/0095_zama_er_flink.html
@@ -78,7 +78,7 @@ Eg vaknar tidleg, fordi eg er flink!</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
 
-<p>Eg kan takla kaldt vann og blå stinkande såpa.</p>
+<p>Eg kan takla kaldt vann og blå stinkande såpe.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -100,7 +100,7 @@ Eg svarar: “Aldri, ikkje eg!”</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>Så kler eg meg sjølv, “Eg er stor no mamma,” seier eg.</p>
+<p>Så kler eg meg sjølv, “Eg er stor no, mamma,” seier eg.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -121,7 +121,7 @@ Eg svarar: “Aldri, ikkje eg!”</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
 
-<p>I klassa mi gjer eg mitt beste i alle måtar.</p>
+<p>I klassa mi gjer eg mitt beste på alle måtar.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
