--- a/stories/nn/0095_zama_er_flink_slides.html
+++ b/stories/nn/0095_zama_er_flink_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>Eg kan takla kaldt vann og blå stinkande såpa.</p>
+<p>Eg kan takla kaldt vann og blå stinkande såpe.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Så kler eg meg sjølv, &quot;Eg er stor no mamma,” seier eg.</p>
+<p>Så kler eg meg sjølv, &quot;Eg er stor no, mamma,” seier eg.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>I klassa mi gjer eg mitt beste i alle måtar.</p>
+<p>I klassa mi gjer eg mitt beste på alle måtar.</p>
 <center>
 <strong>11</strong>
 </center>
