--- a/stories/index.html
+++ b/stories/index.html
@@ -1981,6 +1981,24 @@
   </thead>
   <tbody>
     <tr>
+      <td>0111</td>
+      <td><a href="/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo_slides.html" target="_blank">Bakit walang buhok ang mga hippo</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0122</td>
+      <td><a href="/stories/tl/0122_mahilig-akong-magbasa_slides.html" target="_blank">Mahilig akong Magbasa</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0122"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0127</td>
+      <td><a href="/stories/tl/0127_ibat-ibang-laro_slides.html" target="_blank">Iba’t Ibang Laro</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/tl/0253_aking-libro-ng-larawan_slides.html" target="_blank">Aking libro ng larawan</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2189,7 +2207,7 @@
       <td>0111</td>
       <td><a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0111">ko</a></td>
+      <td><a href="#ko0111">ko</a>, <a href="#tl0111">tl</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -2207,7 +2225,7 @@
       <td>0122</td>
       <td><a href="http://my.africanstorybook.org/stories/i-love-read">I love to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#yue0122">yue</a>, <a href="#zh0122">zh</a></td>
+      <td><a href="#tl0122">tl</a>, <a href="#yue0122">yue</a>, <a href="#zh0122">zh</a></td>
     </tr>
     <tr>
       <td>0123</td>
@@ -2225,7 +2243,7 @@
       <td>0127</td>
       <td><a href="http://my.africanstorybook.org/stories/different-plays">Different Plays</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#fa0127">fa</a>, <a href="#gu0127">gu</a>, <a href="#ja0127">ja</a>, <a href="#nn0127">nn</a>, <a href="#no0127">no</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
+      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#fa0127">fa</a>, <a href="#gu0127">gu</a>, <a href="#ja0127">ja</a>, <a href="#nn0127">nn</a>, <a href="#no0127">no</a>, <a href="#tl0127">tl</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
     </tr>
     <tr>
       <td>0129</td>
